Change the leshen and behemoth expedition tooltips to mention the low amount of hp

--- a/MHW Randomizer/Controls/Expedition.xaml
+++ b/MHW Randomizer/Controls/Expedition.xaml
@@ -71,12 +71,12 @@
                         <CheckBox Content="Include Leshen"
                                   IsChecked="{Binding ExpeditionIncludeLeshen, Source={x:Static local:IoC.Settings}}"
                                   Margin="12, 4"
-                                  ToolTip="Could be hard if included as a possible random monster"
+                                  ToolTip="Has a small amount of health in expeditions"
                                   ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Include Behemoth"
                                   IsChecked="{Binding ExpeditionIncludeBehemoth, Source={x:Static local:IoC.Settings}}"
                                   Margin="12, 4"
-                                  ToolTip="Behemoth could get stuck in some spots due to their size &#xA;(hasn't really been tested)"
+                                  ToolTip="Behemoth could get stuck in some spots due to their size, has a small amount of health in expeditions &#xA;(hasn't really been tested)"
                                   ToolTipService.ShowDuration="10000"/>
                     </StackPanel>
                     <StackPanel>
